--- a/.gitignore
+++ b/.gitignore
@@ -97,8 +97,10 @@ dist
 # FuseBox cache
 .fusebox/
 
-# DynamoDB Local files
+# DynamoDB Local filess
 .dynamodb/
 
 # TernJS port file
 .tern-port
+
+.idea/
